only advanced search and pics left

--- a/web/layout.html
+++ b/web/layout.html
@@ -22,8 +22,8 @@
 		  <input name="key" type="text" placeholder="Sök"/>
 		  <input type="submit" value="Sök" />
 		  </form>
+	<a class="advanced" href="/searchform.html">Avancerad sökning</a>
 	 </div>
-	 
 	 </div>
 </header>
 
