website is done, search needs to be tested additionally and we need to sort the files according to spec

--- a/web/layout.html
+++ b/web/layout.html
@@ -18,11 +18,11 @@
 	 </nav>
 	 
 	 <div id="search">
-		  <form method="POST" action="search"> 
+		<form method="POST" action="search"> 
 		  <input name="key" type="text" placeholder="Sök"/>
 		  <input type="submit" value="Sök" />
 		  </form>
-	<a class="advanced" href="/searchform.html">Avancerad sökning</a>
+		  	<a class="advanced" href="/searchform">Avancerad sökning</a>
 	 </div>
 	 </div>
 </header>
