--- a/web/list.html
+++ b/web/list.html
@@ -14,7 +14,7 @@
     		<div class="span4">
 				<a href="#">
 				<div class="project-thumbnail">
-				<img src="{{ url_for('static', filename=project.small_image) }}" alt="sillypic">
+				<a href="/project/{{ project.project_no }}"><img src="{{ url_for('static', filename=project.small_image) }}" alt="sillypic"/></a>
 				</div>
 				</a>
 			</div>
